# PkgExample

./: .project  .pydevproject  README.md  setup.cfg
src/pkg1/: __init__.py  __main__.py  __version__.py
