[metadata]
name = pkg1
version = attr: pkg1.__version__
url = https://github.com/p--q/PkgExample
author = P--Q
author_email = pq.blogspot@gmail.com
classifiers =
	Development Status :: 3 - Alpha 
    Environment :: Console  
    Intended Audience :: Developers  
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only  
    Programming Language :: Python :: 3.5
    Topic :: Utilities
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.5

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
	pkg1 = pkg1:main
